[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "feagine-gym-env"
version = "0.1.0"
description = "Gymnasium environment for the Feagine MuJoCo robot"
requires-python = ">=3.10"
dependencies = [
    "feagine-mujoco>=0.1.0",
    "gymnasium>=0.29",
    "mujoco>=3.0",
    "numpy>=1.24",
]

[tool.setuptools]
py-modules = ["feagine_env"]
